--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
+* {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
 body {
     background-color: rgb(4, 23, 49);
+    
+}
+.container {
+    margin: 100px auto;
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    align-items: center;
+    flex-direction: column;
+    width: 600px;
+    min-height: 300px;
+}
+h1 {
+    color: rgb(200, 200, 200);
+}
+h3 {
+    color: white;
+}
+.warning {
+    background-color: rgb(212, 244, 251);
+    color: rgb(45, 139, 160);
+    height: 50px;
+    
+}
+.warning, .form {
+    width: 80%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    padding: 0 10px;
+}
+.form {
+    background-color: rgb(248, 248, 248);
+    min-height: 200px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
 }
